--- a/app/src/main/res/layout/hex_editor_keypad.xml
+++ b/app/src/main/res/layout/hex_editor_keypad.xml
@@ -17,22 +17,22 @@
         app:flexWrap="wrap"
         app:justifyContent="center">
 
-        <Button android:id="@+id/button0" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/button1" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/button2" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/button3" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/button4" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="4" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/button5" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="5" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/button6" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="6" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/button7" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="7" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/button8" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="8" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/button9" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="9" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/buttonA" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="A" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/buttonB" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="B" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/buttonC" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="C" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/buttonD" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="D" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/buttonE" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="E" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
-        <Button android:id="@+id/buttonF" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="F" android:minWidth="40dp" android:padding="0dp" app:layout_flexGrow="1" />
+        <Button android:id="@+id/button0" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/button1" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/button2" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/button3" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/button4" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="4" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/button5" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="5" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/button6" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="6" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/button7" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="7" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/button8" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="8" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/button9" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="9" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/buttonA" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="A" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/buttonB" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="B" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/buttonC" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="C" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/buttonD" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="D" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/buttonE" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="E" android:minWidth="40dp" android:padding="0dp" />
+        <Button android:id="@+id/buttonF" style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="F" android:minWidth="40dp" android:padding="0dp" />
     </com.google.android.flexbox.FlexboxLayout>
 
     <!-- Navigation and Actions Group -->
